--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "author": "",
   "license": "ISC",
   "description": "A software that streamlines the process of acquiring let's encrypt ssl certificate",
-  "type": "module",
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -27,8 +27,10 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "prisma": "^6.3.1",
-    "tsc-alias": "^1.8.10"
+    "tsc-alias": "^1.8.10",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
