--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "description": "A software that streamlines the process of acquiring let's encrypt ssl certificate",
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "acme-client": "^5.4.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
