--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "A software that streamlines the process of acquiring let's encrypt ssl certificate",
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "@quixo3/prisma-session-store": "^3.1.13",
     "acme-client": "^5.4.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -22,6 +23,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "express-session": "^1.18.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
@@ -33,6 +35,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.4",
