--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-forge": "^1.3.1",
     "prisma": "^6.3.1",
     "winston": "^3.17.0"
   },
@@ -39,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.4",
+    "@types/node-forge": "^1.3.11",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
