--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "node-forge": "^1.3.1",
-    "prisma": "^6.3.1",
+    "nodemailer": "^6.10.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -41,6 +41,8 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.4",
     "@types/node-forge": "^1.3.11",
+    "@types/nodemailer": "^6.4.17",
+    "prisma": "^6.4.1",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
