--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.10.0",
     "winston": "^3.17.0"
@@ -40,6 +41,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.4",
+    "@types/node-cron": "^3.0.11",
     "@types/node-forge": "^1.3.11",
     "@types/nodemailer": "^6.4.17",
     "prisma": "^6.4.1",
