--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsnd --respawn -r tsconfig-paths/register --pretty --transpile-only ./src/index.ts",
+    "dev": "tsx watch src/index.ts --watch src/uploads/SSL_CERT.swagger.json",
     "build": "tsc && tsc-alias",
     "start": "node ./dist",
     "postinstall": "prisma generate"
@@ -11,6 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "description": "A software that streamlines the process of acquiring let's encrypt ssl certificate",
   "dependencies": {
     "@prisma/client": "^6.3.1",
@@ -30,6 +31,7 @@
     "node-cron": "^3.0.3",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.10.0",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -44,10 +46,13 @@
     "@types/node-cron": "^3.0.11",
     "@types/node-forge": "^1.3.11",
     "@types/nodemailer": "^6.4.17",
+    "@types/swagger-ui-express": "^4.1.8",
+    "cross-env": "^7.0.3",
     "prisma": "^6.4.1",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.19.4",
     "typescript": "^5.7.3"
   }
 }
